--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pwettyflw</title>
+    <title>Funflower</title>
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,14 +21,15 @@
 <body>
 
 <!-- Navbar Start -->
+<header>
     <nav class="navbar">
-        <a href="#" class="navbar-logo">Pwetty<span>flw</span>_</a>
+        <a href="#" class="navbar-logo">Fun<span>Flower</span>_</a>
 
         <div class="navbar-nav">
             <a href="#">Home</a>
-            <a href="#about">Tentang Kami</a>
+            <a href="#about">About Us</a>
             <a href="#menu">Menu</a>
-            <a href="#contact">Kontak</a>
+            <a href="#contact">Contact</a>
         </div>
 
         <div class="navbar-extra">
@@ -37,93 +38,107 @@
             <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
     </nav>
+</header>
 <!-- Navbar end -->
 
-
+<main>
 <!-- Hero Section start -->
+<article>
     <section class="hero" id="Home">
-        <main class="content">
-            <h1>app premium by <span>pwettyflw</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quam.</p>
-            <a href="#" class="cts">Beli Sekarang</a>
-        </main>
+        <div class="content">
+            <h1>Pretty Bouquet by <span>Funflower</span></h1>
+            <p>Show your love and attention by giving a beautiful bouquet for your lovers.</p>
+            <a href="#" class="cts">Order Now</a>
+        </div>
     </section>
+</article>
 <!-- Hero Section end -->
 
 <!-- About section start -->
+<article>
     <section id="about" class="about">
-        <h2><span>Tentang</span> Kami</h2>
-
+        <h2><span>About</span> Us</h2>
         <div class="row">
             <div class="about-img">
-                <img src="../pwettyflw/img/3.jpg" alt="Tentang Kami">
+                <img src="img/aboutus.jpeg" alt="About us">
             </div>
             <div class="content">
-                <h3>Kenapa memilih jasa kami</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam debitis tempora consequuntur provident, laboriosam odio?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus reiciendis aut velit tempora doloremque voluptate nobis quidem, placeat vero saepe.</p>
-
+                <h3>Why you should buy Bouquet?</h3>
+                <p>A bouquet of flowers isn't just a collection of beautiful blooms; it's an expression of love and appreciation that's truly priceless. By giving a bouquet of flowers, you're not just conveying messages of affection and care to your loved ones, but also bringing joy and cheer with every petal. Make special moments even more meaningful with the beauty and freshness of stunning flowers. From weddings to expressions of gratitude, a bouquet of flowers is a universal symbol of kindness and beauty that never fades.</p>
             </div>
         </div>
     </section>
+</article>
 <!-- About section end -->
 
 <!-- Menu Section start -->
-<section id="menu" class="menu">
-    <h2><span>Menu</span> Kami</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio nihil eos reiciendis. Ad, voluptatum corrupti.</p>
-    
-
-    <div class="row">
-        <div class="menu-card">
-            <img src="../pwettyflw/img/1.jpg" alt="netflix" class="menu-card-image">
-            <h3 class="menu-card-title">- Netflix -</h3>
-            <p class="menu-card-price">IDR 25k</p>
+<article>
+    <section id="menu" class="menu">
+        <h2>Our <span>Menu</span></h2>
+        <p>We provide various types of bouquets, ranging from fresh and natural real flower bouquets to money bouquets, and we are also open to custom bouquet services.</p>    
+        <div class="row">
+            <div class="menu-card">
+                <img src="img/crochet.jpeg" alt="crochet bouquet" class="menu-card-image">
+                <h3 class="menu-card-title">- Crochet Bouquet -</h3>
+                <p class="menu-card-price">Start from IDR 25k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/flower.jpeg" alt="flower bouquet" class="menu-card-image">
+                <h3 class="menu-card-title">- Fress Flower Bouquet -</h3>
+                <p class="menu-card-price">Start from IDR 30k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/pipecleaner.jpeg" alt="Pipecleaner Bouquet" class="menu-card-image">
+                <h3 class="menu-card-title">- Pipecleaner Bouquet -</h3>
+                <p class="menu-card-price">Start from IDR 20k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/fotocard.jpeg" alt="foto card bouquet" class="menu-card-image">
+                <h3 class="menu-card-title">- Photo Card Bouquet -</h3>
+                <p class="menu-card-price">Start from IDR 25k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/money.jpeg" alt="Money bouquet" class="menu-card-image">
+                <h3 class="menu-card-title">- Money Bouquet -</h3>
+                <p class="menu-card-price">Start from IDR 50k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/snack.jpeg" alt="snack bouquet" class="menu-card-image">
+                <h3 class="menu-card-title">- Snack Bouquet -</h3>
+                <p class="menu-card-price">Start from IDR 20k</p>
+            </div>
         </div>
-        <div class="menu-card">
-            <img src="../pwettyflw/img/1.jpg" alt="netflix" class="menu-card-image">
-            <h3 class="menu-card-title">- Netflix -</h3>
-            <p class="menu-card-price">IDR 25k</p>
-        </div>
-        <div class="menu-card">
-            <img src="../pwettyflw/img/1.jpg" alt="netflix" class="menu-card-image">
-            <h3 class="menu-card-title">- Netflix -</h3>
-            <p class="menu-card-price">IDR 25k</p>
-        </div>
-        <div class="menu-card">
-            <img src="../pwettyflw/img/1.jpg" alt="netflix" class="menu-card-image">
-            <h3 class="menu-card-title">- Netflix -</h3>
-            <p class="menu-card-price">IDR 25k</p>
-        </div>
-    </div>
-</section>
+    </section>
+</article>
 <!-- Menu Section end -->
+</main>
 
 <!-- Contact Section start -->
-<section id="contact" class="contact">
-    <h2><span>Kontak</span> Kami</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, vero.</p>
-
-    <div class="row">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.6581284434965!2d107.66463111744383!3d-6.811372699999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e082ef78b54d%3A0x5acf586455549722!2sWarung%20Es%20Krim%20Goreng%20Kang%20Oman!5e0!3m2!1sid!2sid!4v1675924775855!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
-
-        <form action="">
-            <div class="input-group">
-                <i data-feather="user"></i>
-                <input type="text" placeholder="nama">
-            </div>
-            <div class="input-group">
-                <i data-feather="mail"></i>
-                <input type="text" placeholder="email">
-            </div>
-            <div class="input-group">
-                <i data-feather="phone"></i>
-                <input type="text" placeholder="no hp">
-            </div>
-            <button type="submit" class="btn">Kirim Pesan</button>
-        </form>
-    </div>
-</section>
+<aside>
+    <section id="contact" class="contact">
+        <h2>Our <span>Contact</span></h2>
+        <p>Let us know if you're interested by sending a message to the contact below.</p>
+        <p>We're waiting for you</p>
+        <div class="row">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.606076338138!2d107.62087617401433!3d-6.817672393180006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e0e25b41bd79%3A0x99001368d35dc479!2sPs.%20Panorama%20Lembang%2C%20Lembang%2C%20Kec.%20Lembang%2C%20Kabupaten%20Bandung%20Barat%2C%20Jawa%20Barat%2040391!5e0!3m2!1sid!2sid!4v1716991111793!5m2!1sid!2sid" width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <form action="">
+                <div class="input-group">
+                    <i data-feather="user"></i>
+                    <input type="text" placeholder="name">
+                </div>
+                <div class="input-group">
+                    <i data-feather="mail"></i>
+                    <input type="text" placeholder="email">
+                </div>
+                <div class="input-group">
+                    <i data-feather="phone"></i>
+                    <input type="text" placeholder="phone">
+                </div>
+                <button type="submit" class="btn">Send</button>
+            </form>
+        </div>
+    </section>
+</aside>
 <!-- Contact Section end -->
 
 <!-- Footer start -->
@@ -136,13 +151,13 @@
 
     <div class="links">
         <a href="#home">Home</a>
-        <a href="#about">Tentang Kami</a>
+        <a href="#about">About us</a>
         <a href="#menu">Menu</a>
-        <a href="#contact">Kontak</a>
+        <a href="#contact">Contact</a>
     </div>
 
     <div class="credit">
-        <p>Created by <a href="">AnitaNatalia</a>. | &copy; 2023.</p>    
+        <p>Created by <a href="">AnitaNatalia</a>. | &copy; 2024.</p>    
     </div>
 </footer>
 <!-- Footer end -->
